<resources>
    <string name="app_name">BuzzTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contact permissions are needed for providing email
        completions."
    </string>
    <string name="loginbtn">Login</string>
    <string name="username_label">USERNAME</string>
    <string name="username_field" />
    <string name="password_label">PASSWORD</string>
    <string name="login_btn">Login</string>
    <string name="cancel_btn">Cancel</string>

    <!-- Strings related to registration -->
    <string name="name_label">NAME</string>
    <string name="address_label">ADDRESS</string>
    <string name="dob_label">DATE OF BIRTH</string>
    <string name="prompt_email">EMAIL</string>
    <string name="register_btn">Register</string>
    <string name="register_label">Registration</string>
    <string name="account_type_label">Account Type</string>
    <string name="title_activity_location_manage">LocationManage</string>

    <!-- Strings related to LocationManage -->
    <string name="edit_label">Edit</string>
    <string name="remove_label">Remove</string>
    <string name="add_label">+</string>
    <string name="location_name_label">Name</string>
    <string name="location_type_label">Type</string>
    <string name="edit_location">Enter location</string>
    <string name="button_submit">Submit</string>
    <string name="label_add_donation">Add Donation</string>
    <string name="button_add_picture">Attach Picture</string>
    <string name="edit_short_description">Enter short description</string>
    <string name="edit_long_description">Enter long description</string>
    <string name="edit_value">Enter price</string>
    <string name="edit_category">Enter category</string>
    <string name="edit_timestamp">Enter timestamp</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_google_maps2">Map</string>
</resources>
