<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:id="@+id/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_label"
            android:textColor="@color/white"
            android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_label"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/account_type_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/account_spinner"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:layout_marginLeft="80dp"
                        android:textColor="@color/white" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/name_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/name_field"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:text="@string/username_field"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/prompt_email"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/address_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/address_field"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/dob_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/month_spinner"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="30dp"
                            android:fontFamily="sans-serif-light"
                            android:scrollbarSize="15sp"
                            android:textColor="@color/white" />

                        <Spinner
                            android:id="@+id/day_spinner"
                            android:layout_width="80dp"
                            android:layout_marginRight="30dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:scrollbarSize="15sp"
                            android:textColor="@color/white" />

                        <Spinner
                            android:id="@+id/year_spinner"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:scrollbarSize="15sp"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:scrollbarSize="15sp"
                            android:text="@string/username_label"
                            android:textAllCaps="true"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/username_field"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif-light"
                            android:inputType="text"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:scrollbarSize="15sp"
                        android:text="@string/password_label"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/register_btn"
                            android:layout_width="113dp"
                            android:layout_height="29dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/btn_bg"
                            android:fontFamily="sans-serif-medium"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/register_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/cancel_btn"
                            android:layout_width="118dp"
                            android:layout_height="33dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/btn_bg"
                            android:fontFamily="sans-serif-medium"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/cancel_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="15sp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>